--- a/HOME.html
+++ b/HOME.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>python class</title>
 
+
+
   <style>
 
       body{
@@ -45,11 +47,16 @@
 <h4>heading five</h4>
 
 
+<h5>Welcome to My Simple Webpage</h5>
+
 <p> MY FIRST <br> PYTHON PROJECT</p>
 
 <p>my second paragraph</p>
 
 <p><b>lesson three </p>
+
+
+
 
 
 <!---->
