--- a/images.html
+++ b/images.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>image</title>
+    <title>Images</title>
+
+    < link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <!-- nav links-->
